--- a/src/sections/contacts.pug
+++ b/src/sections/contacts.pug
@@ -8,7 +8,7 @@ section(id="contacts").section.contacts
                 label(for = "name" ).form__label Введите ваше имя
                 input(type = 'text', id = "name" placeholder="Ковальчук Дмитрий").form__input
               span.form__col.form__col-mail
-                label(for = "mail").form__label Введите ваш email
+                label(for = "mail").form__label Введите ваш e-mail
                 input(type = 'email', id = "mail" placeholder="loftschool@study.com").form__input
             span.form__row
               span.form__col.form__col-message
