--- a/src/sections/footer.pug
+++ b/src/sections/footer.pug
@@ -1,47 +1,59 @@
 footer.footer
-      .container.container-footer
+      .container.container--footer
       
-        .footer__col
+        
           
             
-          .footer__element.footer__element-copyright &#169 2019
-        .footer__col
+        .footer__element.footer__element--copyright &#169 2019
+        .footer__element.footer__element--description
+          .footer__element.footer__element--name Илья Плотников
+          .footer__text Личный сайт веб-разработчика
+        .footer__element.footer__element--navigation
+        
+          ul.navigation.navigation--footer
+            li.navigation__item.navigation__item--footer
+             a(href="#").navigation__link Главная
+            li.navigation__item.navigation__item--footer
+              a(href="#hello").navigation__link Обо мне
+            li.navigation__item.navigation__item--footer
+              a(href="#skills").navigation__link Навыки
+            li.navigation__item.navigation__item--footer
+               a(href="#jobs").navigation__link Работы
+            li.navigation__item.navigation__item--footer
+              a(href="#feedback").navigation__link Отзывы
+            li.navigation__item.navigation__item--footer
+               a(href="#contacts").navigation__link Связаться
+        .footer__description-block
+          .footer__description-block--socials
+            .footer__description--school.footer__description Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+            ul.socials.socials--footer.footer__description
+              li.socials__item.socials__item--footer
+                a(href="#").socials__link.socials__link--insta
+                   
+              li.socials__item.socials__item--footer
+                a(href="#").socials__link.socials__link--vk
+                   
+              li.socials__item.socials__item--footer  
+                a(href="https://github.com/ShiftL0ck").socials__link.socials__link--github
+          .footer__description-block--wisdom
+            .footer__description.footer__description--wisdom Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает, где вы живете!
+            .footer__description.footer__description--credits Martin Golding
+
+
+       
 
             
-          .footer__element.footer__element-name Илья <br> Плотников
-          .footer__description Личный сайт <br> веб разработчика
+        
 
             
          
             
-        .footer__col
-          .footer__element.footer__element-navigation
-            ul.navigation.navigation-footer
-              li.navigation__item.navigation__item-footer
-                a(href="#").navigation__link Главная
-              li.navigation__item.navigation__item-footer
-                a(href="#hello").navigation__link Обо мне
-              li.navigation__item.navigation__item-footer
-                a(href="#skills").navigation__link Навыки
-              li.navigation__item.navigation__item-footer
-                a(href="#jobs").navigation__link Работы
-              li.navigation__item.navigation__item-footer
-                a(href="#feedback").navigation__link Отзывы
-              li.navigation__item.navigation__item-footer
-                a(href="#contacts").navigation__link Связаться
-          .footer__row
-            .footer__col 
-             .footer__description-school.footer__description Этот сайт я сделал в рамках обучения в <br> Школе онлайн образования Loftschool
-              ul.socials.footer__description
-                li.socials__item.socials__item-footer
-                  a(href="#").socials__link.socials__link-insta
+        
+      
+           
+         
+             
+             
                    
-                li.socials__item.socials__item-footer
-                  a(href="#").socials__link.socials__link-vk
-                   
-                li.socials__item.socials__item-footer  
-                 a(href="https://github.com/ShiftL0ck").socials__link.socials__link-github
-                   
-            .footer__col 
-              .footer__description.footer__description-wisdom Всегда пишите код так, будто сопровождать его будет <br> склонный к насилию психопат, который знает, где вы <br> живете
-              .footer__description.footer__description-credits Martin Golding
+      
+              
