--- a/src/sections/hello.pug
+++ b/src/sections/hello.pug
@@ -1,5 +1,5 @@
 section(id="hello").section.hello
-        .container.container-hello
+        .container.container--hello
           .welcome-card 
             .welcome-card__info
              .welcome-card__photo
@@ -28,4 +28,4 @@ section(id="hello").section.hello
                 .welcome-card__row
                    p.welcome-card__text Я занимаюсь разработкой современных сайтов и приложений
                    p.welcome-card__text Мне нравится делать интересные и современные проекты
-              p.welcome-card__texti Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+              p.welcome-card__text.welcome-card__text--cursive Этот сайт я сделал в рамках обучения в Школе онлайн образования<br> Loftschool. Чуть позже я освежу в нём свой контент. А пока <br> посмотрите, как тут всё классно и красиво!
