--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -1,4 +1,4 @@
-.container-contacts {padding: 150px 0}
+.container--contacts {padding: 150px 0}
 .form {margin: 0px 30px;
 width: 65%}
 span.form__row {display: flex; margin-bottom: 50px;
@@ -12,7 +12,8 @@ margin-right: 50px;
 &:last-child{margin-right: 0;}}
 
 
-.form__input {border: none;
+.form__input {
+border: none;
 border-bottom: 1px solid #464e63; width:100%;
 background: transparent;
 font-weight: 700; 
@@ -23,14 +24,10 @@ padding: 10px 70px;
 &:-moz-placeholder           {   color: #464e63; }
 &::-moz-placeholder          {   color: #464e63; }
 &:-ms-input-placeholder      {   color: #464e63; } 
-
-}
-.form__input-textarea{
-  height: 42px;
-  resize: none;
 }
 .form__input:focus{outline:none
 }
+.form__input:hover{background: rgba(255,255,255,0.5)}
 
 .form__col::before{content:"";
   width: 20px;
@@ -38,19 +35,20 @@ padding: 10px 70px;
 position: absolute;
 left: 0;
 bottom: 5px;
-
 padding:10px;
 background: #000;
 }
 
+.form__input--textarea {resize: none}
 
 
 
-.form__col-name::before{background: svg-load('user.svg', fill = #ced0d6, width = 100%, height = 100% ) no-repeat center;
+
+.form__col--name::before{background: svg-load('user.svg', fill = #ced0d6, width = 100%, height = 100% ) no-repeat center;
 background-size: contain;}
-.form__col-message::before{background: svg-load('message.svg', fill = #ced0d6, width = 100%, height = 100% ) no-repeat center;
+.form__col--message::before{background: svg-load('message.svg', fill = #ced0d6, width = 100%, height = 100% ) no-repeat center;
   background-size: contain;}
-.form__col-mail::before{background: svg-load('envelope.svg', fill = #ced0d6, width = 100%, height = 100% ) no-repeat center;
+.form__col--mail::before{background: svg-load('envelope.svg', fill = #ced0d6, width = 100%, height = 100% ) no-repeat center;
     background-size: contain;}
 
 
@@ -72,4 +70,32 @@ background-size: contain;}
 
 .form__label {color: rgba(#464e63, 0.4);
 margin-bottom: 10px; margin-left: 70px;}
+
+@include tablets{
+  .form
+  {width: 100%; margin-left: 0;}
+  .form__headline
+  {width:100%; text-align: center;}
+  .form__row--button
+  {display: flex;
+  justify-content: center;}
+}
+
+@include phones {
+  .form__col--name::before{display: none}
+  .form__col--message::before{display: none}
+  .form__col--mail::before{display: none}
+.form__input{padding: 5px 20px;}
+.form__label{margin-left: 50px;}
+.form__col--name{margin-right: 0;margin-bottom: 20px;}
+.form__row{flex-direction:column; margin-bottom: 20px;}
+.form__button {width:100%}
+.form__input--textarea {height: 6em; padding: 0px 20px
+}
+.container--contacts {padding-top: 50px;}
+}
+
+
+
+
   
