third week done!

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,13 +9,8 @@ html(lang="ru")
     title Портфолио Ильи П.
     link(rel="shortcut icon" href="src/images/content/Favicon.png" type="image/png")
   body
-    
-
-
 
     .wrapper
-      
-          
       .wallpaper.wallpaper--mountain
         .parallax.parallax--1
         .parallax.parallax--2
@@ -24,39 +19,26 @@ html(lang="ru")
         .parallax.parallax--5
         .parallax.parallax--6
         .parallax-content
-          include sections/header.pug
+
+          include sections/introduction.pug
           include sections/hello.pug
       include sections/skills.pug
       include sections/jobs.pug
       .wallpaper.wallpaper--shangrila
-        
         .parallax-s.parallax-s--2
         .parallax-s.parallax-s--1
         .parallax-s.parallax-s--3
         .parallax-s.parallax-s--4
-       
         .parallax-s-content
           include sections/feedback.pug
           include sections/contacts.pug
       include sections/footer.pug
       include sections/popup.pug
- 
-      
-      
+
+
+
     script(src="src/main.js")
 
-      
-
-
-
-
-
-
-            
-            
-
-            
-            
 
 
 
@@ -72,42 +54,53 @@ html(lang="ru")
 
 
 
-    
-        
-        
-           
-          
 
 
 
-      
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-
-          
-
-        
-         
-         
-       
-
-        
 
 
-      
-
-    
-      
 
 
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
