--- a/src/sections/popup.pug
+++ b/src/sections/popup.pug
@@ -1,28 +1,29 @@
 .popup
-    .popup__left
-        a(href="#").logo-link.logo-link--popup ИП 
-    .popup__right
-        button(type ="button").exit-button 
-        ul.navigation.navigation--popup
-          li.navigation__item.navigation__item--popup
-            a(href="#").navigation__link Главная
-          li.navigation__item.navigation__item--popup
-            a(href="#hello").navigation__link Обо мне
-          li.navigation__item.navigation__item--popup
-            a(href="#skills").navigation__link Навыки
-          li.navigation__item.navigation__item--popup
-            a(href="#jobs").navigation__link Работы
-          li.navigation__item.navigation__item--popup
-            a(href="#feedback").navigation__link Отзывы
-          li.navigation__item.navigation__item--popup
-              a(href="#contacts").navigation__link Связаться
-        ul.socials.socials--popup
-            li.socials__item.socials__item--popup
-                a(href="#").socials__link
-                    +icon ('insta')
-            li.socials__item.socials__item--popup
-                a(href="#").socials__link
-                    +icon ('vk')
-            li.socials__item.socials__item--popup
-                a(href="https://github.com/ShiftL0ck").socials__link
-                    +icon ('github')
+  .popup__left
+    .popup__logo
+      .logo ИП 
+  .popup__right
+    button(type ="button").exit-button 
+    ul.navigation.navigation--popup
+      li.navigation__item
+        a(href="#").navigation__link Главная
+      li.navigation__item
+        a(href="#hello").navigation__link Обо мне
+      li.navigation__item
+        a(href="#skills").navigation__link Навыки
+      li.navigation__item
+        a(href="#jobs").navigation__link Работы
+      li.navigation__item
+        a(href="#feedback").navigation__link Отзывы
+      li.navigation__item
+        a(href="#contacts").navigation__link Связаться
+    ul.socials.socials--popup
+      li.socials__item
+        a(href="#").socials__link
+          +icon ('insta')
+      li.socials__item
+        a(href="#").socials__link
+          +icon ('vk')
+      li.socials__item
+        a(href="https://github.com/ShiftL0ck").socials__link
+          +icon ('github')
