--- a/src/styles/blocks/jobs.pcss
+++ b/src/styles/blocks/jobs.pcss
@@ -1,86 +1,204 @@
-
-.container--jobs {margin-top: 50px;}
-.jobs__content {display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "slider slider description"; 
-    margin-top: 50px;}
-    .jobs__slider {grid-area: slider; position: relative;margin-right: 120px ;}
-    .jobs__description{grid-area: description}
-.jobs__preview {position: relative; width: 100%;}
-.jobs__small-previews {position: absolute; right: 0; bottom: 0; width: 17%;
-}
-.jobs__small-preview {&:hover{transform:translateX(-20%); width: 125%}}
-.jobs__button {overflow: hidden; border: 3px solid transparent}
-.active {border: 3px solid #dc9322}
-.jobs__arrows {display: flex; width: 100%; justify-content: flex-end; color: #fff; position: absolute; bottom: -50px}
-.jobs__arrow {background: svg-load('arrow-down.svg', fill = #5d6471, width = 75%, height = 75% ) no-repeat center;
-    background-color: #353e4e; height: 50px; width: 50px;
-    padding: 20px;
-    background-size: 30%;
-   
-    
-
-    &:hover {background: svg-load('arrow-down.svg', fill = #fff, width = 100%, height = 100% ) no-repeat center;
-        background-size: 30%;
-        background-color: #353e4e}
-    
-        
-        
-}
-.bigPreview{position: relative;}
-.jobs__arrow--down {transform:rotate(90deg);}
-.jobs__arrow--up {transform:rotate(270deg);}
-
-
-.tech-list {display: flex; margin-bottom: 30px; flex-wrap: wrap; width: 100%;}
-.tech-list__item {background: #f3f5f9;
-border-radius: 15px;
-padding: 5px 10px;
-max-width: 33%;
-display: flex;
-align-items: center;
-text-align: center;
-
-
-margin-right: 20px;
-&:last-child {margin-right: 0;}}
-
-.jobs__paragraph {font-size: 16px;
-    color: rgba(#464e63, 0.5); margin-bottom: 30px;}
-
-.jobs__link {color: #586fd3; 
-font-weight: 900; border-bottom: 2px solid transparent; transition: 0.3s;
-&:hover {border-bottom: 2px solid  #586fd3; transition: 0.3s; }
+.jobs__container {
+  margin-top: 50px;
 }
 
-.jobs__icon-link {fill: #586fd3; height: 0.9rem; margin-right: 20px; margin-bottom: -2px;  }
+.jobs__content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "slider slider description";
+  margin-top: 50px;
+}
 
-.jobs__headline--description-list {margin-bottom: 30px;}
+.jobs__slider {
+  grid-area: slider;
+  position: relative;
+  margin-right: 120px;
+}
 
-.jobs__number-box {position: absolute;
-right:0; margin-right: -110px; top: 0; height: 100%; display: flex; align-items: center; }
-.jobs__number {font-size: 300px; font-weight: 800; color: #f8f8fa }
+.jobs__description {
+  grid-area: description;
+}
+
+.jobs__preview {
+  position: relative;
+  width: 100%;
+}
+
+.jobs__small-previews {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 17%;
+}
+
+.jobs__small-preview {
+  &:hover {
+    background-color: #5500f3;
+    transition: 0.3s;
+    transform: translateX(-20%);
+    width: 125%;
+  }
+}
+
+.jobs__button {
+  overflow: hidden;
+  border: 3px solid transparent;
+}
+
+.active {
+  border: 3px solid #dc9322;
+}
+
+.jobs__arrows {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  color: #fff;
+  position: absolute;
+  bottom: -50px;
+}
+
+.jobs__arrow {
+  background: svg-load('arrow-down.svg', fill = #fff, width = 75%, height = 75%) no-repeat center;
+  background-color: #353e4e;
+  height: 50px;
+  width: 50px;
+  padding: 20px;
+  background-size: 23%;
+
+  &:hover {
+    background-color: #5500f3;
+  }
+}
+
+.bigPreview {
+  position: relative;
+}
+
+.jobs__arrow--down {
+  transform: rotate(90deg);
+}
+
+.jobs__arrow--up {
+  transform: rotate(270deg);
+}
+
+.tech-list {
+  display: flex;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.tech-list__item {
+  background: #f3f5f9;
+  border-radius: 15px;
+  padding: 5px 10px;
+  max-width: 33%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-right: 20px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.jobs__paragraph {
+  font-size: 16px;
+  color: rgba(#464e63, 0.5);
+  margin-bottom: 30px;
+}
+
+.jobs__link {
+  color: #586fd3;
+  font-weight: 900;
+  border-bottom: 2px solid transparent;
+  transition: 0.3s;
+
+  &:hover {
+    border-bottom: 2px solid #586fd3;
+    transition: 0.3s;
+  }
+}
+
+.jobs__icon-link {
+  fill: #586fd3;
+  height: 0.9rem;
+  margin-right: 20px;
+  margin-bottom: -2px;
+}
+
+.jobs__headline--description-list {
+  margin-bottom: 30px;
+}
+
+.jobs__number-box {
+  position: absolute;
+  right: 0;
+  margin-right: -110px;
+  top: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.jobs__number {
+  font-size: 300px;
+  font-weight: 800;
+  color: #f8f8fa;
+}
 
 @include tablets {
-    .container--jobs{width: 100%;}
-    .jobs__content 
-    {display: grid;
-    grid-template-columns: 1fr ;
+  .jobs__container {
+    width: 100%;
+  }
+
+  .jobs__content {
+    display: grid;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    grid-template-areas: "slider"
-    "description"; 
+    grid-template-areas: "slider" "description";
     align-items: center;
-    margin-top: 50px;}
-    .jobs__description {text-align: center; margin-left: 0; margin-top: 50px;}
-    .tech-list {width: 100%; justify-content: center;}
-    .jobs__headline{text-align: center; width: 100%;}
+    margin-top: 50px;
+  }
+
+  .jobs__description {
+    text-align: center;
+    margin-left: 0;
+    margin-top: 50px;
+  }
+
+  .tech-list {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .jobs__headline {
+    text-align: center;
+    width: 100%;
+  }
 }
 
-@include phones {.jobs__small-previews {display: none}
-.jobs__slider {margin-right: 0;}
-.jobs__arrows {position: absolute;
-bottom: 0}
-.jobs__content{align-items: start}}
+@include phones {
+  .jobs__small-previews {
+    display: none;
+  }
+
+  .jobs__slider {
+    margin-right: 0;
+  }
+
+  .jobs__arrows {
+    position: absolute;
+    bottom: 0;
+  }
+
+  .jobs__content {
+    align-items: start;
+  }
+}
 
 
