--- a/src/styles/blocks/section--hello.pcss
+++ b/src/styles/blocks/section--hello.pcss
@@ -1,31 +1,11 @@
-.container--hello {display: flex;
-justify-content: center; padding-top: 150px;}
-.welcome-card {display: flex; font-weight: 600; color: rgba(#464e63, 0.5);
-margin-bottom: 250px;}
-.welcome-card__info {margin-right: 125px;}
-.welcome-card__description {display: flex;}
-.welcome-card__row {margin-bottom: 20px; &:last-child{margin-bottom: 0;}}
-
-.welcome-card__headline {color: #464d62;
-font-size: 36px; font-weight: 700 }
-
-.welcome-card__col:first-child{margin-right: 50px;}
-.welcome-card__col--dark {color: #464d62}
-.welcome-card__photo {display: flex;
-    justify-content: center;margin-bottom: 50px;}
-.my-photo {border-radius: 50%; height: 200px; width: 200px
+.hello__container {
+  display: flex;
+  justify-content: center;
+  padding-top: 150px;
 }
 
-.welcome-card__upper-part {margin-bottom: 90px;}
-
-.welcome-card__text--cursive {font-style: italic;
- font-weight: 400}
-
- 
-
-@include phones {.container--hello (padding-top: 0;) .welcome-card {display:flex; flex-direction:column; align-items: center;}
-.welcome-card__info {margin-right: 0;}
-.welcome-card__textcontent {margin-top: 35px}
-.welcome-card__headline{font-size: 52px}
-.welcome-card__upper-part {margin-bottom: 30px;}}
-
+@include phones {
+  .hello__container {
+    padding-top: 0;
+  }
+}
