--- a/src/styles/blocks/section--skills.pcss
+++ b/src/styles/blocks/section--skills.pcss
@@ -1,94 +1,131 @@
-.skills {position: relative;
-    &::before {content: "";
-        position: absolute;
-        top: -100px;
-        left: 0;
-        border-bottom: 100px solid #fff;
-        
-        border-right: 49.9vw solid transparent}
-    &::after {content: "";
-        position: absolute;
-        top: -100px;
-        right: 0;
-        border-bottom: 100px solid #fff;
-        
-        border-left: 49.9vw solid transparent}}
+.skills {
+  position: relative;
 
+  &::before {
+    content: "";
+    position: absolute;
+    top: -100px;
+    left: 0;
+    border-bottom: 100px solid #fff;
+    border-right: 49.9vw solid transparent;
+  }
 
-.container--skills {display: grid;
-    grid-template-columns: 1.5fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "backpack skills-list skills-list";
+  &::after {
+    content: "";
+    position: absolute;
+    top: -100px;
+    right: 0;
+    border-bottom: 100px solid #fff;
+    border-left: 49.9vw solid transparent;
+  }
+}
+
+.skills__container {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "backpack skills-list skills-list";
 }
 
 .backpack-picture {
-    grid-area: backpack;
-    justify-self: center; align-self: center;
-
-background:url("~images\content\backpack.png") no-repeat center ;
-background-size: contain;
-width: 100%;
-height: 100%;
-}
-.why-me {grid-area: skills-list;     margin-top: 30px;}
-.why-me__headline {margin-bottom: 35px;}
-
-
-.why-me__headline--skills-list {margin-bottom: 30px; font-size: 28px;
+  grid-area: backpack;
+  justify-self: center;
+  align-self: center;
+  background: url("~images\content\backpack.png") no-repeat center;
+  background-size: contain;
+  width: 100%;
+  height: 100%;
 }
 
-.why-me__text {color: rgba(#464e63, 0.5); margin-bottom: 40px;}
-
-.skills-list {margin-left: 30px;}
-.why-me__list-item {position: relative; width: 25%; height: 25%;}
-.why-me__list-item:last-child{margin-right: 0;}
-
-.why-me__skills-list {display: flex; color: #a2a6b0; margin-bottom: 30px; justify-content: space-evenly }
-
-.percentage {display: block;
-    height: 100%; 
-    width: 100%;
-    transform: rotate(180deg); 
-
-    
+.why-me {
+  grid-area: skills-list;
+  margin-top: 30px;
 }
-.circle {fill: transparent;
-stroke-width: 7px;
-stroke:   #e9e9e9;
-cx:50px;
-cy:50px;
-r:40px}
 
-.circle__above {stroke: #7600ea;
-    stroke-width: 13px;
-stroke-dasharray:251;
-stroke-dashoffset: 251;
-animation: fill 100s linear infinite;
-animation-play-state: paused;
+.why-me__headline {
+  margin-bottom: 35px;
+}
 
+.why-me__headline--skills-list {
+  margin-bottom: 30px;
+  font-size: 28px;
+}
+
+.why-me__text {
+  color: rgba(#464e63, 0.5);
+  margin-bottom: 40px;
+}
+
+.skills-list {
+  margin-left: 30px;
+}
+
+.why-me__list-item {
+  position: relative;
+  width: 25%;
+  height: 25%;
+}
+
+.why-me__list-item:last-child {
+  margin-right: 0;
+}
+
+.why-me__skills-list {
+  display: flex;
+  color: #a2a6b0;
+  margin-bottom: 30px;
+  justify-content: space-evenly;
+}
+
+.percentage {
+  display: block;
+  height: 100%;
+  width: 100%;
+  transform: rotate(180deg);
+}
+
+.circle {
+  fill: transparent;
+  stroke-width: 7px;
+  stroke: #e9e9e9;
+  cx: 50px;
+  cy: 50px;
+  r: 40px;
+}
+
+.circle__above {
+  stroke: #7600ea;
+  stroke-width: 13px;
+  stroke-dasharray: 251;
+  stroke-dashoffset: 251;
+  animation: fill 100s linear infinite;
+  animation-play-state: paused;
 }
 
 @keyframes fill {
-from {stroke-dashoffset: 251}
-to {stroke-dashoffset: 0}
+  from {
+    stroke-dashoffset: 251;
+  }
+
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
-.why-me__skill-name {    position: absolute;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    padding: 25%;
-    text-align: center;
-   
-    
-    top: 0;
+.why-me__skill-name {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  padding: 25%;
+  text-align: center;
+  top: 0;
 }
 
 @include desktop {
-    .backpack-picture
-    {
+  .backpack-picture {
     grid-area: backpack;
     justify-self: center;
     align-self: center;
@@ -96,49 +133,76 @@ to {stroke-dashoffset: 0}
     background-size: 150%;
     width: 100%;
     height: 100%;
-    }
+  }
 }
-
 
 @include tablets {
-.why-me
- {text-align:center;}
- .backpack-picture {
-    grid-area: backpack;
-    justify-self: center; align-self: center;
+  .why-me {
+    text-align: center;
+  }
 
-background:url("~images\content\backpack.png") no-repeat center ;
-background-size: contain;
-width: 100%;
-height: 100%;
-}
-.container--skills
- {display: grid;
+  .backpack-picture {
+    grid-area: backpack;
+    justify-self: center;
+    align-self: center;
+    background: url("~images\content\backpack.png") no-repeat center;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+  }
+
+  .skills__container {
+    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 0.7fr;
-    grid-template-areas: 
-    "skills-list"
-    "skills-list"
-    "backpack";}
-.skills-list {margin-left: 0;}
-.skills {position: relative;
-    &::before {content: "";
-        position: absolute;
-        top: -110px;
-        left: 0;
-        border-bottom: 100px solid #fff;
-        
-        border-right: 49.9vw solid transparent}
-    &::after {content: "";
-        position: absolute;
-        top: -110px;
-        right: 0;
-        border-bottom: 100px solid #fff;
-        
-        border-left: 49.9vw solid transparent}}}
+    grid-template-areas: "skills-list" "skills-list" "backpack";
+  }
 
-@include phones {.why-me__headline {text-align: left;}
-.why-me__text {text-align: left}
-.why-me__headline--skills-list {text-align: center}
-.why-me__skills-list {flex-wrap: wrap;}
-.why-me__list-item{width: 40%} }
+  .skills-list {
+    margin-left: 0;
+  }
+
+  .skills {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -110px;
+      left: 0;
+      border-bottom: 100px solid #fff;
+      border-right: 49.9vw solid transparent;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -110px;
+      right: 0;
+      border-bottom: 100px solid #fff;
+      border-left: 49.9vw solid transparent;
+    }
+  }
+}
+
+@include phones {
+  .why-me__headline {
+    text-align: left;
+  }
+
+  .why-me__text {
+    text-align: left;
+  }
+
+  .why-me__headline--skills-list {
+    text-align: center;
+  }
+
+  .why-me__skills-list {
+    flex-wrap: wrap;
+  }
+
+  .why-me__list-item {
+    width: 40%;
+  }
+}
