--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -6,6 +6,7 @@ html {
     font-size: 14px;
   }
 }
+
 body,
 html {
   height: 100%;
@@ -24,6 +25,80 @@ body {
   overflow: hidden;
   min-height: 100%;
   position: relative;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-size: inherit;
+  font-style: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+input {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: inherit;
+
+  &:active {
+    border: none;
+    outline: none;
+  };
+
+  &:focus {
+    border: none;
+    outline: none;
+  }
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+
+  &:active {
+    border: none;
+    outline: none;
+  };
+
+  &:focus {
+    border: none;
+    outline: none;
+  }
+}
+
+textarea {
+  resize: none;
+}
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 .container {
@@ -55,11 +130,13 @@ ul {
   padding: 0;
   margin: 0;
   list-style: none;
-  box-sizing:border-box
+  box-sizing: border-box;
 }
 
-li {padding: 0;
-  margin: 0;}
+li {
+  padding: 0;
+  margin: 0;
+}
 
 h1,
 h2,
