--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -2,4 +2,4 @@
 @import "normalize.css";
 @import "./mixins.pcss";
 @import "./layout/*.pcss";
-@import './blocks/*.pcss';
+@import "./blocks/*.pcss";
