fixed menu and color

--- a/src/sections/header.pug
+++ b/src/sections/header.pug
@@ -4,7 +4,7 @@ header.header
       .logo ип
     ul.navigation
       li.navigation__item
-        a(href="#").navigation__link Главная
+        a(href="#intro").navigation__link Главная
       li.navigation__item
         a(href="#hello").navigation__link Обо мне
       li.navigation__item
