--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -11,6 +11,14 @@
   justify-content: space-between;
 }
 
+.header .navigation__item{
+  margin-left: 45px;
+
+  @include mini-desktop {
+  margin-left: 25px;
+  }
+}
+
 .header__logo {
   margin-left: 30px;
 }
