--- a/src/sections/footer.pug
+++ b/src/sections/footer.pug
@@ -7,7 +7,7 @@ footer.footer
     .footer__element.footer__element--navigation
       ul.navigation.navigation--footer
         li.navigation__item
-          a(href="#").navigation__link Главная
+          a(href="#intro").navigation__link Главная
         li.navigation__item
           a(href="#hello").navigation__link Обо мне
         li.navigation__item
