--- a/src/sections/popup.pug
+++ b/src/sections/popup.pug
@@ -6,7 +6,7 @@
     button(type ="button").exit-button 
     ul.navigation.navigation--popup
       li.navigation__item
-        a(href="#").navigation__link Главная
+        a(href="#intro").navigation__link Главная
       li.navigation__item
         a(href="#hello").navigation__link Обо мне
       li.navigation__item
