--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -132,6 +132,16 @@
   }
 }
 
+.error .contacts__form-textarea{
+  background: svg-load(
+    "message.svg",
+    fill=rgba(red, 1),
+    width=100%,
+    height=100%
+  )
+  0 0 no-repeat;
+}
+
 .contacts__form-input {
   width: 100%;
   border: none;
@@ -160,9 +170,29 @@
   }
 }
 
+.error .contacts__form-input--name{
+  background: svg-load(
+    "user.svg",
+    fill=rgba(red, 1),
+    width=100%,
+    height=100%
+  )
+  0 0 no-repeat;
+}
+
+.error .contacts__form-input--email{
+  background: svg-load(
+    "envelope.svg",
+    fill=rgba(red, 1),
+    width=100%,
+    height=100%
+  )
+  0 0 no-repeat;
+}
+
 .contacts__form-textarea {
   width: 100%;
-  resize: none;
+  resize: none !important;
   border: none;
   background: transparent;
   resize: vertical;
